--- a/view/frontend/email/order_new.html
+++ b/view/frontend/email/order_new.html
@@ -4,7 +4,7 @@
  * See COPYING.txt for license details.
  */
 -->
-<!--@subject Your {{var store.getFrontendName()}} FUCKING order confirmation @-->
+<!--@subject Your {{var store.getFrontendName()}} order confirmation @-->
 <!--@vars {
 "var formattedBillingAddress|raw":"Billing Address",
 "var order.getEmailCustomerNote()":"Email Order Note",
