--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -49,6 +49,23 @@
                                         </item>
                                     </item>
                                 </item>
+                                <item name="sidebar" xsi:type="array">
+                                   <item name="children" xsi:type="array">
+                                      <item name="shipping-information" xsi:type="array">
+                                          <item name="children" xsi:type="array">
+                                                <item name="pickup-at" xsi:type="array">
+                                                    <item name="component" xsi:type="string">uiComponent</item>
+                                                    <item name="displayArea" xsi:type="string">pickup-at</item>
+                                                    <item name="children" xsi:type="array">
+                                                      <item name="pickup_at_info" xsi:type="array">
+                                                        <item name="component" xsi:type="string">Nord_Shipfunk/js/view/shipping-information/pickup</item>
+                                                      </item>
+                                                    </item>
+                                                </item>
+                                          </item>
+                                      </item>
+                                   </item>
+                                </item>
                             </item>
                         </item>
                     </item>
