--- a/view/adminhtml/templates/custom.phtml
+++ b/view/adminhtml/templates/custom.phtml
@@ -1,18 +1,16 @@
 <?php /** @var \Nord\Shipfunk\Block\Adminhtml\Order\View\Custom $block */ ?>
 <?php if ($block->hasPickupInformation()) { ?>
-    <div class="admin__page-section-item" id="shippingPickupInformation" style="margin-top:200px; width:calc( (100%) * .5 - 30px );">
-        <div class="admin__page-section-item-title">
-        <span class="title">
-            Pickup Point
-        </span>
-        </div>
-        <address class="admin__page-section-item-content">
-            <?php echo $block->getPickupInformation(); ?>
-        </address>
+<div id="shippingPickupInformation">
+    <div class="admin__page-section-item-title">
+        <span class="title"><?= /* @escapeNotVerified */ __('Pickup Point') ?></span>
     </div>
-    <script>
-        require(['jquery'], function ($) {
-            $('#shippingPickupInformation').appendTo($('.order-shipping-address').parent());
-        });
-    </script>
+    <div class="admin__page-section-item">
+        <strong class="admin__page-section-item-content"><?= $block->getPickupInformation() ?></strong>
+    </div>
+</div>
+<script>
+    require(['jquery'], function ($) {
+        $('#shippingPickupInformation').appendTo($('.order-shipping-method'));
+    });
+</script>
 <?php } ?>
