Pickup point info misplacement bugfix

--- a/view/adminhtml/templates/custom.phtml
+++ b/view/adminhtml/templates/custom.phtml
@@ -7,7 +7,9 @@
 </div>
 <script>
     require(['jquery'], function ($) {
+      $(document).ready(function() {
         $('#shippingPickupInformation').appendTo($('.order-shipping-method'));
+      });
     });
 </script>
 <?php } ?>
