--- a/view/frontend/web/css/shipfunk-popup.css
+++ b/view/frontend/web/css/shipfunk-popup.css
@@ -1,5 +1,3 @@
-.block-shipfunk .points div { cursor:pointer; cursor: pointer;
-    background-color: #e6e6e6;
-    border: 1px solid lightgrey;
-    padding: 20px; }
+.block-shipfunk .points div { cursor:pointer; cursor: pointer; background-color: #e6e6e6; border: 1px solid lightgrey; padding: 20px; }
 .block-shipfunk .points div.selected, .block-shipfunk .points div:hover {  border: 2px solid #2dd22d; }
+.block-shipfunk .points span.points-additional { font-size: 0.9em; color: #666666; font-style: italic;}
